--- a/src/app/emotion-selector/emotion-selector.component.less
+++ b/src/app/emotion-selector/emotion-selector.component.less
@@ -7,5 +7,9 @@
         &__item {
             margin: 5px;
         }
+
+        &__item:first-child {
+            margin-top: 10px;
+        }
     }
 }
